# vbsp-entities-codegen

./: .gitignore  Cargo.toml  README.md
data/: classes.json  inherits.json  types.json
sdk-parser/: Cargo.toml
sdk-parser/src/: main.rs
src/: main.rs  sdk_data.rs
