[package]
name = "vbsp-entities-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full", "parsing"] }
vbsp = { git = "https://github.com/krakow10/vbsp", rev = "25b0878a0b4eafcd2e04a0469519859a58617b6c" }
