[package]
name = "vbsp-entities-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full", "parsing"] }
vbsp = { git = "https://github.com/krakow10/vbsp", rev = "c148db5a3e1756b8ef095750cba57f7884a266a1" }
