[package]
name = "vbsp-entities-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full", "parsing"] }
vbsp = "0.8.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"